-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.0-rc1
-
Linux 64 bit, Gallium 0.4 on llvmpipe (LLVM 0x302)
-
f189bb458179630b26a5b93e06eacaa2a138b793
The gui thread of Qt Creator sometimes locks up in QSGRenderLoop::polishAndSync when switching between WelcomeScreen and Profiler mode (with QML Profiler timeline active).
How to reproduce
Launch Qt Creator. Switch between Welcome Screen and Profiler mode really fast by using the keyboard shortcuts (Ctrl+1, Ctrl+6).
After a while creator locks up . The attached debugger shows following backtrace:
gdb) thread apply all bt Thread 21 (Thread 0x7fff57f12700 (LWP 1119)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007ffff54e0e2d in QWaitConditionPrivate::wait (this=0x3eccc30, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:136 #2 0x00007ffff54e0bd7 in QWaitCondition::wait (this=0x3ece2a8, mutex=0x3ece2a0, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:208 #3 0x00007fffe1f5f26b in QSGRenderThreadEventQueue::takeEvent (this=0x3ece298, wait=true) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:265 #4 0x00007fffe1f5d5f9 in QSGRenderThread::processEventsAndWaitForMore (this=0x3ece220) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:650 #5 0x00007fffe1f5d7ba in QSGRenderThread::run (this=0x3ece220) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:680 #6 0x00007ffff54df628 in QThreadPrivate::start (arg=0x3ece220) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #7 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #8 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 20 (Thread 0x7fff64d13700 (LWP 1118)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007ffff54e0e2d in QWaitConditionPrivate::wait (this=0x3ecf560, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:136 #2 0x00007ffff54e0bd7 in QWaitCondition::wait (this=0x3ecfd58, mutex=0x3ecfd50, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:208 #3 0x00007fffe1f5f26b in QSGRenderThreadEventQueue::takeEvent (this=0x3ecfd48, wait=true) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:265 #4 0x00007fffe1f5d5f9 in QSGRenderThread::processEventsAndWaitForMore (this=0x3ecfcd0) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:650 #5 0x00007fffe1f5d7ba in QSGRenderThread::run (this=0x3ecfcd0) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:680 #6 0x00007ffff54df628 in QThreadPrivate::start (arg=0x3ecfcd0) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #7 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #8 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 19 (Thread 0x7fff65514700 (LWP 1117)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007ffff54e0e2d in QWaitConditionPrivate::wait (this=0x3ece340, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:136 #2 0x00007ffff54e0bd7 in QWaitCondition::wait (this=0x3ecf818, mutex=0x3ecf810, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:208 #3 0x00007fffe1f5f26b in QSGRenderThreadEventQueue::takeEvent (this=0x3ecf808, wait=true) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:265 #4 0x00007fffe1f5d5f9 in QSGRenderThread::processEventsAndWaitForMore (this=0x3ecf790) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:650 #5 0x00007fffe1f5d7ba in QSGRenderThread::run (this=0x3ecf790) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:680 #6 0x00007ffff54df628 in QThreadPrivate::start (arg=0x3ecf790) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #7 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #8 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 18 (Thread 0x7fff6675c700 (LWP 1116)): #0 0x00007ffff44bd4ed in poll () from /lib64/libc.so.6 #1 0x00007ffff34baaa4 in ?? () from /usr/lib64/libglib-2.0.so.0 #2 0x00007ffff34babc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0 #3 0x00007ffff57781b5 in QEventDispatcherGlib::processEvents (this=0x7fff580008c0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:426 #4 0x00007ffff56fbaca in QEventLoop::processEvents (this=0x7fff6675bda0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:136 #5 0x00007ffff56fbdb7 in QEventLoop::exec (this=0x7fff6675bda0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:212 #6 0x00007ffff54d818e in QThread::exec (this=0x36dc220) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread.cpp:509 #7 0x00007fffe1939409 in QQmlThreadPrivate::run (this=0x36dc220) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/qml/qml/ftw/qqmlthread.cpp:148 #8 0x00007ffff54df628 in QThreadPrivate::start (arg=0x36dc220) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #9 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #10 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 17 (Thread 0x7fff677ff700 (LWP 1115)): #0 0x00007ffff44bd4ed in poll () from /lib64/libc.so.6 #1 0x00007ffff34baaa4 in ?? () from /usr/lib64/libglib-2.0.so.0 #2 0x00007ffff34babc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0 #3 0x00007ffff57781b5 in QEventDispatcherGlib::processEvents (this=0x7fff600008c0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:426 #4 0x00007ffff56fbaca in QEventLoop::processEvents (this=0x7fff677feda0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:136 #5 0x00007ffff56fbdb7 in QEventLoop::exec (this=0x7fff677feda0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:212 #6 0x00007ffff54d818e in QThread::exec (this=0x3018c10) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread.cpp:509 #7 0x00007fffe1939409 in QQmlThreadPrivate::run (this=0x3018c10) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/qml/qml/ftw/qqmlthread.cpp:148 #8 0x00007ffff54df628 in QThreadPrivate::start (arg=0x3018c10) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #9 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #10 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 16 (Thread 0x7fff789bb700 (LWP 1114)): #0 0x00007ffff44bd4ed in poll () from /lib64/libc.so.6 #1 0x00007ffff34baaa4 in ?? () from /usr/lib64/libglib-2.0.so.0 #2 0x00007ffff34babc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0 #3 0x00007ffff57781b5 in QEventDispatcherGlib::processEvents (this=0x7fff6c0008c0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:426 #4 0x00007ffff56fbaca in QEventLoop::processEvents (this=0x7fff789bada0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:136 #5 0x00007ffff56fbdb7 in QEventLoop::exec (this=0x7fff789bada0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:212 #6 0x00007ffff54d818e in QThread::exec (this=0x294be20) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread.cpp:509 #7 0x00007fffe1939409 in QQmlThreadPrivate::run (this=0x294be20) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/qml/qml/ftw/qqmlthread.cpp:148 #8 0x00007ffff54df628 in QThreadPrivate::start (arg=0x294be20) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #9 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #10 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 15 (Thread 0x7fff7bfff700 (LWP 1113)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007ffff54e0e2d in QWaitConditionPrivate::wait (this=0x1a16cd0, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:136 #2 0x00007ffff54e0bd7 in QWaitCondition::wait (this=0x1a16aa8, mutex=0x1a16aa0, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:208 ---Type <return> to continue, or q <return> to quit--- #3 0x00007fffe1f5f26b in QSGRenderThreadEventQueue::takeEvent (this=0x1a16a98, wait=true) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:265 #4 0x00007fffe1f5d5f9 in QSGRenderThread::processEventsAndWaitForMore (this=0x1a16a20) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:650 #5 0x00007fffe1f5d7ba in QSGRenderThread::run (this=0x1a16a20) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:680 #6 0x00007ffff54df628 in QThreadPrivate::start (arg=0x1a16a20) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #7 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #8 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 13 (Thread 0x7fff827fa700 (LWP 1084)): #0 0x00007ffff44bd4ed in poll () from /lib64/libc.so.6 #1 0x00007ffff34baaa4 in ?? () from /usr/lib64/libglib-2.0.so.0 #2 0x00007ffff34babc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0 #3 0x00007ffff57781b5 in QEventDispatcherGlib::processEvents (this=0x7fff7c0008c0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:426 #4 0x00007ffff56fbaca in QEventLoop::processEvents (this=0x7fff827f9da0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:136 #5 0x00007ffff56fbdb7 in QEventLoop::exec (this=0x7fff827f9da0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:212 #6 0x00007ffff54d818e in QThread::exec (this=0xebb830) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread.cpp:509 #7 0x00007fffe1939409 in QQmlThreadPrivate::run (this=0xebb830) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/qml/qml/ftw/qqmlthread.cpp:148 #8 0x00007ffff54df628 in QThreadPrivate::start (arg=0xebb830) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #9 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #10 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 12 (Thread 0x7fff82ffb700 (LWP 1083)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 11 (Thread 0x7fff837fc700 (LWP 1082)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 10 (Thread 0x7fff83ffd700 (LWP 1081)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 9 (Thread 0x7fffc8ccd700 (LWP 1080)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 8 (Thread 0x7fffc94ce700 (LWP 1079)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 7 (Thread 0x7fffc9ccf700 (LWP 1078)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 6 (Thread 0x7fffca4d0700 (LWP 1077)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 5 (Thread 0x7fffcacd1700 (LWP 1076)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007fffcaebc333 in ?? () from /usr/lib64/dri/swrast_dri.so #2 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #3 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 4 (Thread 0x7fffd0d2b700 (LWP 1075)): #0 0x00007ffff44bd4ed in poll () from /lib64/libc.so.6 #1 0x00007ffff34baaa4 in ?? () from /usr/lib64/libglib-2.0.so.0 #2 0x00007ffff34babc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0 #3 0x00007ffff57781d5 in QEventDispatcherGlib::processEvents (this=0x7fffc40008c0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:428 #4 0x00007ffff56fbaca in QEventLoop::processEvents (this=0x7fffd0d2ada0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:136 #5 0x00007ffff56fbdb7 in QEventLoop::exec (this=0x7fffd0d2ada0, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:212 #6 0x00007ffff54d818e in QThread::exec (this=0xc383a0) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread.cpp:509 #7 0x00007ffff54d8334 in QThread::run (this=0xc383a0) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread.cpp:576 ---Type <return> to continue, or q <return> to quit--- #8 0x00007ffff54df628 in QThreadPrivate::start (arg=0xc383a0) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #9 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #10 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 3 (Thread 0x7fffd152c700 (LWP 1073)): #0 0x00007ffff44bf293 in select () from /lib64/libc.so.6 #1 0x00007ffff56910e6 in QProcessManager::run (this=0x655a30) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/io/qprocess_unix.cpp:272 #2 0x00007ffff54df628 in QThreadPrivate::start (arg=0x655a30) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #3 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #4 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 2 (Thread 0x7fffebf24700 (LWP 1072)): #0 0x00007ffff44bd4ed in poll () from /lib64/libc.so.6 #1 0x00007ffff109e0e2 in ?? () from /usr/lib64/libxcb.so.1 #2 0x00007ffff109f86f in xcb_wait_for_event () from /usr/lib64/libxcb.so.1 #3 0x00007fffef032c63 in QXcbEventReader::run (this=0x63b150) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/plugins/platforms/xcb/qxcbconnection.cpp:1008 #4 0x00007ffff54df628 in QThreadPrivate::start (arg=0x63b150) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qthread_unix.cpp:345 #5 0x00007ffff4face0f in start_thread () from /lib64/libpthread.so.0 #6 0x00007ffff44c644d in clone () from /lib64/libc.so.6 Thread 1 (Thread 0x7fffef2f3740 (LWP 1068)): #0 0x00007ffff4fb0964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 #1 0x00007ffff54e0e2d in QWaitConditionPrivate::wait (this=0x1a16c60, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:136 #2 0x00007ffff54e0bd7 in QWaitCondition::wait (this=0x1a16a68, mutex=0x1a16a60, time=18446744073709551615) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/thread/qwaitcondition_unix.cpp:208 #3 0x00007fffe1f5e85e in QSGThreadedRenderLoop::polishAndSync (this=0xebbf60, w=0x1a165d0) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:1067 #4 0x00007fffe1f5ec05 in QSGThreadedRenderLoop::event (this=0xebbf60, e=0x7fffffffcd00) at /home/kkoehne/dev/qt/qt-stable/src/qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:1131 #5 0x00007ffff6d56a96 in QApplicationPrivate::notify_helper (this=0x61d640, receiver=0xebbf60, e=0x7fffffffcd00) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/widgets/kernel/qapplication.cpp:3467 #6 0x00007ffff6d53f77 in QApplication::notify (this=0x7fffffffd130, receiver=0xebbf60, e=0x7fffffffcd00) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/widgets/kernel/qapplication.cpp:2888 #7 0x00007ffff56feefe in QCoreApplication::notifyInternal (this=0x7fffffffd130, receiver=0xebbf60, event=0x7fffffffcd00) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:878 #8 0x00007ffff5702bdb in QCoreApplication::sendEvent (receiver=0xebbf60, event=0x7fffffffcd00) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qcoreapplication.h:232 #9 0x00007ffff577648c in QTimerInfoList::activateTimers (this=0x657f00) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qtimerinfo_unix.cpp:643 #10 0x00007ffff57777ea in timerSourceDispatch (source=0x657ea0) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:185 #11 0x00007ffff34ba7d5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0 #12 0x00007ffff34bab08 in ?? () from /usr/lib64/libglib-2.0.so.0 #13 0x00007ffff34babc4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0 #14 0x00007ffff57781b5 in QEventDispatcherGlib::processEvents (this=0x64d260, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:426 #15 0x00007fffef067e0e in QPAEventDispatcherGlib::processEvents (this=0x64d260, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/platformsupport/eventdispatchers/qeventdispatcher_glib.cpp:123 #16 0x00007ffff56fbaca in QEventLoop::processEvents (this=0x7fffffffd000, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:136 #17 0x00007ffff56fbdb7 in QEventLoop::exec (this=0x7fffffffd000, flags=...) at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qeventloop.cpp:212 #18 0x00007ffff56ff5d6 in QCoreApplication::exec () at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/corelib/kernel/qcoreapplication.cpp:1131 #19 0x00007ffff5d08ad6 in QGuiApplication::exec () at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/gui/kernel/qguiapplication.cpp:1332 #20 0x00007ffff6d53825 in QApplication::exec () at /home/kkoehne/dev/qt/qt-stable/src/qtbase/src/widgets/kernel/qapplication.cpp:2692 #21 0x000000000040f215 in main (argc=1, argv=0x7fffffffdce8) at /home/kkoehne/dev/creator/3.0/src/src/app/main.cpp:531
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-